--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
       MYSQL_DATABASE: sf_arcadia
       MYSQL_USER: adminArcadia
       MYSQL_PASSWORD: arcadia123$
-      DARABASE_URL: mysql://root:wyguXFroCYhESoTprQNvtMJSoPlpohJo@autorack.proxy.rlwy.net:25214/railway
+      DATABASE_URL: mysql://root:wyguXFroCYhESoTprQNvtMJSoPlpohJo@autorack.proxy.rlwy.net:25214/railway
     ports:
       - "3306:3306"
     volumes:
@@ -29,14 +29,14 @@ services:
       - mysql
 
   nginx:
-    image: nginx:latest
-    ports:
-      - "8080:80"
-    volumes:
-      - ./app:/var/www/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - php
+  image: nginx:latest
+  ports:
+    - "8080:80"
+  volumes:
+    - ./app:/var/www/html
+    - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  depends_on:
+    - php
 
 networks:
   symfony:
