--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,6 @@ version: "3.9"
 services:
   mysql:
     image: mysql:8.0
-    container_name: arcadiazoo-symfony-api-backend-mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: sf_arcadia
@@ -23,41 +22,24 @@ services:
       dockerfile: Dockerfile
     environment:
       DATABASE_URL: "mysql://ljdbwvhgivks7gxo:dqvxz4v7n0pco32u@tj5iv8piornf713y.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/r1kou6d4xdy6q9er"
-    container_name: arcadiazoo-symfony-api-backend-php
     volumes:
       - ./app:/var/www/html
-      - ./php/conf.d:/usr/local/etc/php/conf.d
     working_dir: /var/www/html
     depends_on:
       - mysql
-    networks:
-      - arcadia-network
 
   nginx:
   image: nginx:latest
-  container_name: arcadiazoo-symfony-api-backend-nginx
   ports:
     - "8080:80"
   volumes:
-    - ./app:/var/www/html/public
-    - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    - ./app:/var/www/html
+    - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
   depends_on:
     - php
-  networks:
-      - arcadia-network
-
-mailpit:
-    image: axllent/mailpit
-    container_name: arcadiazoo-symfony-api-backend-mailpit
-    ports:
-      - "56671:1025"
-    networks:
-      - arcadia-network
 
 networks:
   symfony:
-    driver: bridge
-  arcadia-network:
     driver: bridge
 
 volumes:
